--- a/src/main/resources/templates/model_attribute.html
+++ b/src/main/resources/templates/model_attribute.html
@@ -5,6 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-modelAttribute：<p th:text="${errmsg}"></p>
+modelAttribute：<p th:text="${miaoshaUser}"></p>
 </body>
 </html>
