--- a/src/main/resources/templates/test3.html
+++ b/src/main/resources/templates/test3.html
@@ -5,8 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-test1：<p th:text="${miaoshaUser}"></p>
-test2：<p th:text="${string}"></p>
-test3：<p th:text="${miaoshaUser}"></p>
+test3：<p th:text="${test2}"></p>
 </body>
 </html>
