1.添加@ModelAttribute用法的测试用例 2.添加ClassUtils用法的测试用例 3.添加isComponentType用法的测试用例

--- a/src/main/resources/templates/model_attribute.html
+++ b/src/main/resources/templates/model_attribute.html
@@ -8,5 +8,8 @@
 test1：<p th:text="${miaoshaUser}"></p>
 test2：<p th:text="${string}"></p>
 test3：<p th:text="${miaoshaUser}"></p>
+test4：<p th:text="${stringList}"></p>
+test5：<p th:text="${stringList}"></p>
+test6：<p th:text="${map}"></p>
 </body>
 </html>
