添加一些冷门类的用法

--- a/src/main/resources/templates/model_attribute.html
+++ b/src/main/resources/templates/model_attribute.html
@@ -11,5 +11,6 @@ test3：<p th:text="${miaoshaUser}"></p>
 test4：<p th:text="${stringList}"></p>
 test5：<p th:text="${stringList}"></p>
 test6：<p th:text="${map}"></p>
+test7：<p th:text="${cmazxiaoma}"></p>
 </body>
 </html>
